Started working on map, enabled modelling and water plugin

--- a/GGJ2021.uproject
+++ b/GGJ2021.uproject
@@ -21,6 +21,14 @@
 				"Win64",
 				"Linux"
 			]
+		},
+		{
+			"Name": "Water",
+			"Enabled": true
+		},
+		{
+			"Name": "ModelingToolsEditorMode",
+			"Enabled": true
 		}
 	]
 }
