--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=GGJ2021
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Forest_Map.Forest_Map
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap
+GameDefaultMap=/Game/Maps/MainMenu_Map.MainMenu_Map
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
