Enabled our game instance so the settings will work properly

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/Player/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Player/OurGameInstance.OurGameInstance_C
 
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=False
