--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -126,6 +126,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PrimaryInteraction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="SecondaryInteraction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="MapToggle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=M)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
