Fixing audio settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -121,3 +121,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.AudioSettings]
+DefaultBaseSoundMix=/Game/Player/Settings/AudioConfig/MyMix.MyMix
+DefaultSoundClassName=/Game/Player/Settings/AudioConfig/MasterClass.MasterClass
+DefaultMediaSoundClassName=/Game/Player/Settings/AudioConfig/MasterClass.MasterClass
+
